# TeleFeed

./: .gitignore  .prettierrc  AGENTS.md  DESIGN.md  GEMINI.md  LICENSE  README.md  TODO.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
.agent/workflows/: finish-task.md  project-info.md  project-rules.md  start-session.md
.gemini/: mcp_config.json
.gemini/rules/: stack.md  (+1 more)
Docs/: CHANGELOG.md  CHANGELOG_RU.md  GEMINI.md  HLD.md  HLD_RU.md  README.md  SRS.md  SRS_RU.md  project-info.md
api/: swagger.yaml
apple-native/: test_gesture.swift
apple-native-v2/: ROADMAP.md
backend/: Cargo.toml  README.md  local_updater.sh  tauri.conf.json
backend/src/: feed_cache.rs  handlers.rs  lib.rs  main.rs  mobile_server.rs  models.rs  tdlib.rs
backend/src/ipc/: auth.rs  chat.rs  feed.rs  files.rs  mod.rs  system.rs
backend/src/mobile_pwa/: index.html
backend/src/services/: auth.rs  chat.rs  feed.rs  mod.rs
backend/src/tdlib/handlers/: auth.rs  chats.rs  common.rs  feed.rs  mod.rs
docs/: api.md  architecture.md  deploy.md
extractor/: ai_articles.md  auto_extract.py  ext_groups.py  extract.py  extract2.py  extract_folder.py  final_extract.py  group_articles.md  session_name.session  session_name_auto.session  session_name_final.session
frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  structure.md  tsconfig.json  vite.config.js
src/: test-contacts.js  update_ruby.rb
src-tauri/: local_updater.sh  tauri.conf.json
tests/: helpers.test.js  i18n.test.js  messageStore.test.js
(+151 files in other folders)
